[package]
name = "aws-assume-role-rs"
license = "MIT"
authors = ["okkez <okkez000@gmail.com>"]
description = "A command line tool to generate AWS temporary security credentials."
repository = "https://github.com/okkez/aws-assume-role-rs"
homepage = "https://github.com/okkez/aws-assume-role-rs"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = { version = "1.0.83", features = ["backtrace"] }
aws-config = "1.4.0"
aws-runtime = "1.2.2"
aws-sdk-sts = "1.24.0"
backon = "0.4.4"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4", features = ["derive", "wrap_help", "env"] }
dirs = "5.0.1"
mockall = "0.13.0"
regex = "1.10.4"
rust-ini = "0.21.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
skim = "0.10.4"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
totp-rs = "5.5.1"

[[bin]]
name = "assume-role"
path = "src/main.rs"

[lib]
name = "aws_assume_role"

[dev-dependencies]
assert_cmd = "2.0.14"
pretty_assertions = "1.4.0"
rstest = "0.23.0"
testcontainers = { version = "0.23.0" }
testcontainers-modules = { version = "0.5.0", features = ["localstack"] }
