[package]
name = "aws-assume-role-rs"
license = "MIT"
authors = ["okkez <okkez000@gmail.com>"]
description = "A command line tool to generate AWS temporary security credentials."
repository = "https://github.com/okkez/aws-assume-role-rs"
homepage = "https://github.com/okkez/aws-assume-role-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = { version = "1.0.83", features = ["backtrace"] }
aws-config = "1.4.0"
aws-runtime = "1.2.2"
aws-sdk-sts = "1.24.0"
backon = "1.0.0"
cache-vault = { git = "https://github.com/okkez/cache-vault", version = "0.1" }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4", features = ["derive", "wrap_help", "env"] }
dirs = "5.0.1"
mockall = "0.13.0"
regex = "1.10.4"
rust-ini = "0.21.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
skim = "0.20.0"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.9.0"
totp-rs = "5.5.1"
tracing = "0.1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "assume-role"
path = "src/main.rs"

[lib]
name = "aws_assume_role"

[dev-dependencies]
assert_cmd = "2.0.14"
pretty_assertions = "1.4.0"
rstest = "0.26.0"
testcontainers = { version = "0.25.0" }
testcontainers-modules = { version = "0.13.0", features = ["localstack"] }
tracing-test = "0.2"
